@@ -127,6 +127,8 @@
 #define ERROR_NETSOCKNUMBER_MESSAGE "Invalid Socket Number"
 #define ERROR_PERMISSION 46
 #define ERROR_PERMISSION_MESSAGE "You do not have permission to use this statement/function."
+#define ERROR_IMAGESAVETYPE 47
+#define ERROR_IMAGESAVETYPE_MESSAGE "Invalid image save type."
 //
 #define ERROR_NOTIMPLEMENTED 9999
 #define ERROR_NOTIMPLEMENTED_MESSAGE "Feature not implemented in this environment."
